apps/base/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ntfy
  labels:
    trust.cert-manager.io/inject-bundle: "true"
