apps/base/ntfy/ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: app-ntfy
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ntfy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.23.0
          imagePullPolicy: IfNotPresent
          args:
            - serve
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy
              readOnly: true
            - name: cache
              mountPath: /var/cache/ntfy
            - name: data
              mountPath: /var/lib/ntfy
      volumes:
        - name: config
          configMap:
            name: ntfy-config
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-data
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: app-ntfy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: ntfy
