apps/base/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: app-ntfy

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`ntfy.cluster.arpa`)
      kind: Rule
      services:
        - name: ntfy
          port: http
  tls:
    secretName: ntfy-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-public
  namespace: app-ntfy
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`ntfy.decentm.com`)
      kind: Rule
      services:
        - name: ntfy
          port: http
          serversTransport: ntfy-transport
